# ts-tools

./: .gitattributes  .gitignore  CLAUDE.md  CODEBASE_GUIDE.md  ECKART_PROJECTION_IMPLEMENTATION.md  IMPROVEMENTS_SUMMARY.md  INFO_FOR_GAD.md  NOISE_EXPERIMENTS.md  README.md  SCINE_IMPLEMENTATION_GUIDE.md  SCINE_INFO.MD  SCINE_INTEGRATION.md  SCINE_INTEGRATION_SUMMARY.md  STARTING_GEOMETRY_STATS.md  autopsy.txt  convert_transition1x.slurm  data  december_experiments.tex  diagnosticoutput.txt  doc_snippets.md  gad_euler.slurm  hip_optimizing_sella_logs_noconvergence.txt  hpo_optimization_plan.md  iHiSD.tex  killarney_sample_slurm.slurm  models  output.txt  pyproject.toml  report.txt  requirements.txt  requirements_working.txt  results  setup_env.sh  test_scine_calculator.py  trilliuminfo.txt
dbs/: hip_multi_mode_hpo_201955.db  hip_multi_mode_hpo_205411.db  hip_multi_mode_hpo_205416.db  hip_sella_hpo_job201956.db  hip_sella_hpo_job204339.db  scine_multi_mode_hpo_825749.db  scine_multi_mode_hpo_836595.db  scine_multi_mode_hpo_836596.db  scine_sella_hpo_job833394.db
dev_files/: LBFGS_Code_Review.md  corrected_lbfgs.py  validation_tests.py
diagnostics/: HIP.csv  SCINE.csv
hpo_results/: README.md  analyze_hpo_results.py  hip_multi_mode_hpo_201955.db  hip_sella_hpo_v2_job213318.db  hip_sella_parallel_2.db  hpo_results.tex  scine_sella_hpo_job833394.db  scine_sella_parallel_2.db
hpo_results_full/: HIP_MULTIMODE  HIP_SELLA  SCINE_MULTIMODE  SCINE_SELLA  hpo_results_report.tex
latest_results/: diagnostic_report.txt  minimization_newton_raphson_1093135_results.json
(+1096 files in other folders)
