[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-tools"
version = "0.1.0"
description = "Transition state search tools using Gradient Ascent Dynamics"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric",
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "ase",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
